kustomize/web/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
      - name: html
        configMap:
          name: web
      containers:
        - name: web
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html
          #resources:
      #nodeSelector:
      #affinity:
      #tolerations:
