kustomize/web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"

spec:
  tls:
  - hosts:
    - $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)
    #secretName: sslcert
  rules:
  - host: $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)
    http:
      paths:
      - path: /web
        backend:
          serviceName: web
          servicePort: 80
